--- a/ocs-healthexpenditure.Rmd
+++ b/ocs-healthexpenditure.Rmd
@@ -21,22 +21,20 @@ knitr::include_graphics('./img/SummaryPlot.png')
 # Motivation  
 
 Health policy in the States is complicated, and several forms of healthcare 
-coverage existed in the United States of America, including both federal goverment-led 
+coverage existed in the United States of America, including both federal government-led 
 healthcare policy, and private insurance company. Before making any inference about 
 the relationship between health condition and health policy, it is important for us to 
-have a general idea about healthcare economics in the States. Thus, We are interested in 
+have a general idea about healthcare economics in the States. Thus, we are interested in 
 getting sense of the health expenditure, including healthcare coverage and 
-healthcare spending, across States. More specifically,
-the quesiton are   
+healthcare spending, across States. More specifically, the questions are:  
 
 1. Is there a relationship between healthcare coverage and healthcare spending in the United States?   
 2. How does the spending distribution change across geographic regions in the United States?  
 3. Does the relationship between healthcare coverage and healthcare spending in the United States change from 2013 to 2014?  
 
 In this case study, we'll walk you through collecting data, 
-importing data, cleaning data, wrangling data, and visulizing the data, using 
-well-established and commonly used packages, including 
-`library(datasets)`, `library(tidyr)`, `library(dplyr)`, `ggplot2`, and `ggrepel`.    
+importing data, cleaning data, wrangling data, and visualizing the data, using 
+well-established and commonly used packages, including `datasets`, `tidyr`, `dplyr`, `ggplot2`, and `ggrepel`.    
  
 # What is the data?    
 
@@ -53,10 +51,9 @@ We will be using the data from the [Henry J Kaiser Family Foundation (KFF)](http
 * [Health Care Expenditures by State of Residence (in millions)](https://www.kff.org/other/state-indicator/health-care-expenditures-by-state-of-residence-in-millions/) - Includes years 1991-2014
  
 We have downloaded, re-named and saved these files in the 
-GitHub repository under the `data/KFF/` directory. 
+[GitHub repository](https://github.com/opencasestudies/ocs-healthexpenditure) under the `data/KFF/` directory. 
 
-Now, before we dig into the data analysis, we need to introduce 
-a set of R packages that we will use to analyze the data. 
+Now, before we dig into the data analysis, we need to introduce a set of R packages that we will use to analyze the data. 
 
 
 # Data Import 
@@ -69,11 +66,11 @@ share an underlying philosophy and common APIs."_
 
 Another way of putting it is that it's a set of packages 
 that are useful specifically for data manipulation, 
-exploration and visualization with a common philosphy. 
+exploration and visualization with a common philosophy. 
 
-#### What is this common philosphy? 
+#### What is this common philosophy? 
 
-The common philosphy is called _"tidy"_ data. It is 
+The common philosophy is called _"tidy"_ data. It is 
 a standard way of mapping the meaning of a dataset
 to its structure.
 
@@ -87,7 +84,7 @@ In _tidy_ data:
 knitr::include_graphics("http://r4ds.had.co.nz/images/tidy-1.png")
 ```
 
-Below, we are interested in transformating the table on 
+Below, we are interested in transforming the table on 
 the right to the the table on the left, which is 
 considered "tidy". 
 
@@ -127,7 +124,7 @@ These packages are highlighted in bold here:
 knitr::include_graphics("https://rviews.rstudio.com/post/2017-06-09-What-is-the-tidyverse_files/tidyverse1.png")
 ```
 
-Because these packages all share the "tidy" philosphy, 
+Because these packages all share the "tidy" philosophy, 
 the data analysis workflow is easier as you move from 
 package to package. 
 
@@ -148,11 +145,11 @@ we will use the functions in the
 R package. The main reasons for this are 
 
 1. Compared to equivalent base R functions, the 
-functions in `readr` are around 10x faser. 
+functions in `readr` are around 10x faster. 
 2. You can specify the column types (e.g 
 character, integer, double, logical, date, 
 time, etc)
-3. All parsing problems are recordered in 
+3. All parsing problems are recorded in 
 a data frame. 
 
 ## Read data using the `readr` R package  
@@ -325,7 +322,7 @@ about in the following way:
 knitr::include_graphics("http://r4ds.had.co.nz/diagrams/data-science.png")
 ```
 
-where each of these steps need their own 
+where each of these steps needs its own 
 tools and software to complete. 
 
 After we import the data into R, if we are 
@@ -498,8 +495,8 @@ form into another format that allows for more convenient
 consumption of the data with the help of semi-automated 
 tools.
 
-As you will see in class, one of the most 
-time-consuming aspects of the data analysis 
+As you may see in class or here from data scientists on Twitter, 
+one of the most time-consuming aspects of the data analysis 
 process is "data wrangling". This is also 
 is a trendy term for 
 _cleaning up a messy data set_. 
@@ -554,7 +551,7 @@ The important `dplyr` verbs to remember are:
 
 ### 3. Pipe operator: %>%
 
-Before we go any futher, let's introduce the 
+Before we go any further, let's introduce the 
 pipe operator: `%>%`. In our `stocks` example,
 we briefly saw this symbol. It is called the
 pipe operator. `dplyr` imports
@@ -732,12 +729,12 @@ coverage %>%
   filter(Location == "Maryland")
 ```
 
-**Note**: you can use the boolean operators 
+**Note**: you can use the Boolean operators 
 (e.g. `>`, `<`, `>=`, `<=`, `!=`, `%in%`) 
 to create logical tests.
 
 For example, if we wanted only years 
-after 2014, we can add a second criteria: 
+after 2014, we can add a second criteria within `filter()`: 
 
 ```{r warning=FALSE,message=FALSE}
 coverage %>% 
@@ -759,9 +756,11 @@ What happened between 2013 and 2014?
 
 ### 6. Arrange or re-order rows using `arrange()` 
 
-Now, let's say we want to see which states has the To arrange (or re-order) rows by a particular 
-column such as the population, list the name of 
-the column you want to arrange the rows by
+Now, let's say we want to see the states ordered from 
+lowest to highest `tot_coverage`.
+
+To arrange (or re-order) rows by a particular 
+column you'll use the `arrange()` function:
 
 ```{r warning=FALSE,message=FALSE}
 coverage %>% 
@@ -785,12 +784,12 @@ coverage %>%
 ### 7. Join two datasets using `join()`  
 
 
-Here, we're gioing to demonstrate how to 
+Here, we're going to demonstrate how to 
 join two datasets using series of `join()` function, including 
 `left_join()`, `right_join()`, `inner_join()`, ...  
 
 Up until now, we have been working with three
-datasets `coverage` and `spending` separtely. 
+datasets `coverage` and `spending` separately. 
 Next, we will combine these together.  
 
 If we want to combine, say, `coverage` and `spending` 
@@ -871,7 +870,7 @@ hc <- hc %>%
 
 Another problem is that inside our `hc` 
 dataset, we have seen there are 
-multiple `types` of healthcare coverage
+multiple `types` of healthcare coverage.
 
 ```{r}
 table(hc$type)
@@ -939,7 +938,7 @@ plot(hc.employer.2013$tot_pop,
 
 This means we need to take into account the 
 population size of each state when we are 
-comparing the heathcare coverage and spending. 
+comparing the healthcare coverage and spending. 
 
 ### 8. Add columns using `mutate()`
 
@@ -972,11 +971,10 @@ scaling factor to report it on the original scale
 
 ```{r}
 hc <- hc %>% 
-    mutate(spending_capita = (tot_spending*1e6) / tot_pop) 
-hc %>% select(prop_coverage, spending_capita)
+  mutate(spending_capita = (tot_spending*1e6) / tot_pop)
 ```
 
-Now we are ready to go back to our first question
+Now we are ready to go back to our first question.
 
 > 1. Is there a relationship between healthcare coverage and healthcare spending in the United States? 
 
@@ -1035,7 +1033,7 @@ If you recall, our question asked about
 _which states_ spent the most, so we want 
 an average spending per capita for each state. 
 
-For this, we need to introduc another function in 
+For this, we need to introduce another function in 
 `dplyr` called `group_by()`. 
 
 ### 10. Group operations using `group_by()`
@@ -1061,7 +1059,7 @@ hc %>%
 That's better. Here we are averaging across the
 years 2013 and 2014. 
 
-#### (*) What are the top 3 states that have the largestaverage spending per capita? What about the top 3 states with the smallest average spending per capita? 
+#### (*) What are the top 3 states that have the largest average spending per capita? What about the top 3 states with the smallest average spending per capita? 
 
 ```{r}
 # smallest 
@@ -1093,7 +1091,7 @@ hc %>%
 
 Another way to visualize distributions is to use boxplots. 
 
-Create four boxplots represening the spending per capita 
+Create four boxplots representing the spending per capita 
 distribution for each of the four regions using 
 the `boxplot()` function in R.
 
@@ -1117,7 +1115,7 @@ of something when you are exploring data.
 We are choosing to introduce `ggplot2` because, in our 
 opinion, it's one of the simplest ways for beginners to 
 create relatively complicated plots that are intuitive 
-and aesthically pleasing. 
+and aesthetically pleasing. 
 
 ## The `ggplot2` R package
 
@@ -1418,7 +1416,7 @@ hc %>%
 ```
 
 Given we know `Other Public` refers to the 
-military or Veterans Adminstration, we can see 
+military or Veterans Administration, we can see 
 states like HI, VA, NV have a larger 
 proportion of military or VA `Other Public` 
 type coverage. While a state like AK has a 
@@ -1488,7 +1486,7 @@ Further, the exploratory analysis via data visualization showed
 higher spending in healthcare per capita 
 is positively associated with higher 
 employer coverage proportion and is 
-negatively associated with the porportion 
+negatively associated with the proportion 
 of uninsured population across the States. 
 
 
